//// --------------------------------------------------------------------------------
//// DBML (Database Markup Language)
////
//// Website: https://dbml.org
//// Docs:    https://dbml.org/docs
//// --------------------------------------------------------------------------------


// Enum definitions
Enum RolUsuario {
  tesorero
  vecino
  administrador
}

Enum TipoExpensa {
  ordinaria
  extraordinaria
}

Enum EstadoExpensa {
  pendiente
  parcial
  pagado
}

Enum TipoGasto {
  mensual
  extraordinario
}

// Table definitions
Table UsuarioApp as "usuario_app" {
  id_usuario string [pk]
  email_login string [unique, not null]
  password string [not null]
  rol RolUsuario [default: 'vecino']
  id_persona string [not null, unique]
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
  deleted_at datetime
}

Table Persona as "persona" {
  id_persona string [pk]
  nombre string [not null]
  apellido string [not null]
  dni string [unique, not null]
  telefono string [not null]
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
  deleted_at datetime
}

Table UnidadFuncional as "unidad_funcional" {
  id_unidad string [pk]
  numero string [not null]
  superficie decimal(10, 2)
  ambientes int [not null]
  piso string [default: 'PB']
  monto_base decimal(10, 2) [default: 0]
  id_propietario string
  id_inquilino string
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
  deleted_at datetime
}

Table Expensa as "expensa" {
  id_expensa string [pk]
  id_unidad string
  mes int [not null]
  anio int [not null]
  tipo TipoExpensa [default: 'ordinaria']
  descripcion text
  monto decimal(10, 2) [not null]
  monto_pagado decimal(10, 2) [default: 0]
  estado EstadoExpensa [default: 'pendiente']
  fecha_vencimiento date
  fecha_pago date
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
  deleted_at datetime
}

Table Gasto as "gasto" {
  id_gasto string [pk]
  concepto string [not null]
  descripcion text
  monto decimal(10, 2) [not null]
  fecha date [not null]
  medio string [not null]
  registrado_por string
  tipo TipoGasto [default: 'mensual']
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
  deleted_at datetime
}

Ref: "usuario_app".id_persona - "persona".id_persona
Ref: "unidad_funcional".id_propietario > "persona".id_persona
Ref: "unidad_funcional".id_inquilino > "persona".id_persona
Ref: "expensa".id_unidad > "unidad_funcional".id_unidad
Ref: "gasto".registrado_por > "usuario_app".id_usuario
